@@ -1,3 +1,15 @@
+2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_draw_progressbar_trough),
+	(murrine_draw_progressbar_fill):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_trough),
+	(murrine_rgba_draw_progressbar_fill):
+	* src/murrine_rc_style.c (murrine_rc_style_parse):
+	* src/murrine_style.c (murrine_style_draw_box):
+	* src/murrine_types.h:
+	First approach with rounded scrollbars.
+	Print more info when using an old option.
+
 2008-12-30  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* schema/murrine.xml.in.in:
